--- a/style.css
+++ b/style.css
@@ -209,7 +209,7 @@ li {
   place-content: center;
 }
 
-main > l-section.l-section {
+main > section.l-section {
   margin-block: var(--space-xxl);
 }
 main > section.l-section:nth-of-type(2n + 3) {
